PUBMAN-1566 fixed: Empty box for CC License and some bugfixes concerning Richfaces
Former-commit-id: 52776ac544916c9f75443348151f2b235e709bd7

--- a/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/ui/Files.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/ui/Files.jspf
@@ -294,7 +294,8 @@
 
 						<h:outputLink styleClass="large_txtBtn groupBtn ccLicense" value=""
 									onclick="var actualCCContent = $pb(this).parents('.licenseArea').find('.messageArea').find('.ccContent');
-											 $pb(actualCCContent).append($pb('head').children('div')); 
+											 $pb(actualCCContent).empty();
+											 $pb(actualCCContent).append($pb('head').children('div').clone()); 
 											 $pb(actualCCContent).parents('.messageArea').removeClass('noDisplay');return false;"
 									ondblclick="return false;">
 									<h:outputText value="#{lbl.EditItem_btnSelectCCLicense}"/>
