--- a/pubman/pubman_presentation/src/main/webapp/editItem/LocatorsGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/editItem/LocatorsGroup.jspf
@@ -52,7 +52,7 @@
 					<h:inputText id="inpAddUrl" styleClass="quad_txtInput" value="#{locator.locator}" />
 				</span>
 				<span class="large_area0_p8 lineToolSection">
-					<h:commandButton id="btnSaveUrl" styleClass="free_txtBtn groupBtn" value="#{lbl.EditItem_lnkSaveURL}" title="#{tip.EditItem_lnkSave}" action="#{EditItem.saveLocator}" />
+					<a4j:commandButton reRender="editLocator" id="btnSaveUrl" styleClass="free_txtBtn groupBtn" value="#{lbl.EditItem_lnkSaveURL}" title="#{tip.EditItem_lnkSave}" action="#{EditItem.saveLocator}" />
 				</span>
 			</h:panelGroup>
 			<h:panelGroup layout="block" styleClass="free_area0 endline itemLine" rendered="#{(locator.locator == null || locator.locator == '') && locator.index > 0 }" >
@@ -65,7 +65,7 @@
 					<h:inputText id="inpMultiAddUrl" styleClass="quad_txtInput" value="#{locator.locator}" />
 				</span>
 				<span class="large_area0_p8 lineToolSection">
-					<h:commandButton id="btnMultiSaveUrl" styleClass="free_txtBtn groupBtn" value="#{lbl.EditItem_lnkSaveURL}" title="#{tip.EditItem_lnkSave}" action="#{EditItem.saveLocator}" />
+					<a4j:commandButton reRender="editLocator" id="btnMultiSaveUrl" styleClass="free_txtBtn groupBtn" value="#{lbl.EditItem_lnkSaveURL}" title="#{tip.EditItem_lnkSave}" action="#{EditItem.saveLocator}" />
 				</span>
 			</h:panelGroup>
 
