PUBMAN-1566 fixed: Empty box for CC License
Former-commit-id: 3065af8176a59c4388eef93f5558476d30fb7c55

--- a/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/ui/Files.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/ui/Files.jspf
@@ -294,8 +294,8 @@
 
 						<h:outputLink styleClass="large_txtBtn groupBtn ccLicense" value=""
 									onclick="var actualCCContent = $pb(this).parents('.licenseArea').find('.messageArea').find('.ccContent');
-											 $pb(actualCCContent).empty();
-											 $pb(actualCCContent).append($pb('head').children('div').clone()); 
+											 var currentURL = $pb(this).parents('.licenseArea').find('.licenseURL').val();
+											 appendLicenseBox(actualCCContent, currentURL);
 											 $pb(actualCCContent).parents('.messageArea').removeClass('noDisplay');return false;"
 									ondblclick="return false;">
 									<h:outputText value="#{lbl.EditItem_btnSelectCCLicense}"/>
