--- a/pubman/pubman_presentation/src/main/webapp/editItem/FilesGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/editItem/FilesGroup.jspf
@@ -263,10 +263,10 @@
 					<h:panelGroup styleClass="quad_area0" rendered="true">
 						<label class="quad_label"><span class="mandatory" title="<h:outputText value='#{msg.mandatoryField}' />"><h:outputText value="*" rendered="false"/></span><h:outputText value="#{lbl.EditItem_lblLicencingInfo}"/></label>
 						<h:inputText id="inpLicenseUrl" styleClass="xDouble_txtInput tiny_marginRIncl licenseURL" value="#{component.file.defaultMetadata.license}"/>
-						<h:outputLink styleClass="large_txtBtn groupBtn ccLicense" value=""
+						<h:outputLink styleClass="large_txtBtn groupBtn ccLicense" value="#"
 									 onclick="var actualCCContent = $pb(this).parents('.licenseArea').find('.messageArea').find('.ccContent');
-											   $pb(actualCCContent).empty();
-											  $pb(actualCCContent).append($pb('head').children('div').clone()); 
+											  var currentURL = $pb(this).parents('.licenseArea').find('.licenseURL').val();
+											  appendLicenseBox(actualCCContent, currentURL);
 											  $pb(actualCCContent).parents('.messageArea').removeClass('noDisplay'); return false;"
 									 ondblclick="return false;">
 							<h:outputText value="#{lbl.EditItem_btnSelectCCLicense}" />
@@ -277,9 +277,14 @@
 							   value=" " class="min_imgBtn quad_marginLIncl fixMessageBlockBtn"/>
 						<div class="ccContent">&#160;</div>
 						<button class="activeButton" onclick="$pb(this).parents('.licenseArea').find('.licenseURL').val($pb(this).parents('.messageArea').find('#cc_js_result_uri').val()); 									  		   
-									  		  $pb(this).parents('.messageArea').addClass('noDisplay');" style="margin-right:0.3636em;"><h:outputText value="#{lbl.EditItem_btnSelectCCLicenseApply}" /></button>
+									  		  $pb(this).parents('.messageArea').addClass('noDisplay'); return false;" style="margin-right:0.3636em;"><h:outputText value="#{lbl.EditItem_btnSelectCCLicenseApply}" /></button>
 						
 				     </h:panelGroup>
+				     
+				     
+				     					
+
+				     
 				</span>
 				<span class="large_area0_p8 lineToolSection">
 					<a4j:commandButton id="btnRemoveFile" reRender="files" styleClass="min_imgBtn sectionTool remove" value=" " title="#{tip.EditItem_removeFile}" action="#{component.removeFile}" rendered="#{genre.files_repeatable != 'false'}"/>
@@ -290,5 +295,7 @@
 			</h:panelGroup>
 
 		</a4j:repeat>
+		
+				     
 	</h:panelGroup>
 </h:panelGroup>
