Resovled [PUBMAN-2234] - Block the author field when a CoNE author is chosen from the auto suggest list Resovled [PUBMAN-2006] - Enable the deletion of autosuggest values from former searches within advanced search
Former-commit-id: 3ea68d1a8c8d7495fe0b1ae834189a9cd6572dfe

--- a/pubman/pubman_presentation/src/main/webapp/editItem/FilesGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/editItem/FilesGroup.jspf
@@ -76,7 +76,7 @@
 			</span>
 		</h:panelGroup>
 			
-		<a4j:repeat var="component" id="fileUploads" value="#{EditItem.files}" rowKeyVar="index">
+		<a4j:repeat var="component" id="fileUploads" value="#{EditItem.files}" rowKeyVar="index" rows="0">
 
 
 <%-- Add File from local system --%>
