Resolved [PUBMAN-2251] - Enable CoNE matching for import formats other than "eDoc" Resolved [PUBMAN-2256] - EndNote import/export bugs GUI updated for [PUBMAN-2234] - Block the author field when a CoNE author is chosen from the auto suggest list

--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG/styles/images.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG/styles/images.css
@@ -880,6 +880,12 @@ body .wrapper {
 	height: 2.90em !important;
 }
 
+.closeIcon {
+	background-image: url('../images/All_DropDown_CrossClose_15_Active.png');
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
 
 /* MAIN MENU */
 .mainMenu span.free_area0 {
