--- a/pubman/pubman_presentation/src/main/webapp/affiliation/AffiliationTree.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/affiliation/AffiliationTree.jspf
@@ -39,19 +39,33 @@
 	</h3>
 	<h:panelGroup styleClass="seperator" />
 	<h:panelGroup styleClass="free_area0_p8 endline itemHeadline">
+		<style type="text/css">
+			.rich-tree-node span.rich-tree-h-ic-img {
+				display:none;
+			}
+		</style>
 		<rich:tree id="treeAffiliation" var="node" switchType="ajax">
+			<f:facet name="icon">
+				<!-- no image for expanded -->
+				<rich:spacer width="0"  height="0" style="border: none;"/>
+			</f:facet>
+			<f:facet name="iconLeaf">
+				<!-- no image for expanded -->
+				<rich:spacer width="0"  height="0" style="border: none;"/>
+			</f:facet>
+			
 			<rich:recursiveTreeNodesAdaptor id="dir" var="node" roots="#{AffiliationBean.affiliations}" nodes="#{node.children}">
-			<rich:treeNode >
-			<h:panelGroup>
-					<h:panelGroup layout="block" styleClass="std_imgArea affTreeOUIcon mpgUnit" style="float: left;" rendered="#{node.mps}"></h:panelGroup>
-					<h:panelGroup layout="block" styleClass="std_imgArea affTreeOUIcon organisationalUnit" style="float: left;" rendered="#{!node.mps && node.topLevel}"></h:panelGroup>
-					<h:graphicImage value="../images/publications_22.gif" height="22px" width="22px"  style="float: left;" rendered="#{!node.topLevel}"/>
-					<h:commandLink id="lnkAffiliationName" styleClass="line-height: 2.10em;" value="#{node.name}" action="#{node.startSearch}"/>
-					<h:outputText value=" (#{lbl.AffilitationTree_ouClosed})" rendered="#{node.isClosed}"/>
-					&#160;
-					<h:outputLink id="lnkAffiliationDetails" title="#{tip.Affiliation_details}" value="" onclick="openCenteredWindow('#{ApplicationBean.appContext}AffiliationDetailPage.jsp?id=#{node.reference.objectId}', 980, 400, 'Details');return false">   [<h:outputText value="#{lbl.AffiliationTree_lnkDescription}"/>]</h:outputLink>
-			</h:panelGroup>
-			</rich:treeNode>
+				<rich:treeNode>
+					<h:panelGroup>
+						<h:panelGroup layout="block" styleClass="std_imgArea affTreeOUIcon mpgUnit" style="float: left;" rendered="#{node.mps}"></h:panelGroup>
+						<h:panelGroup layout="block" styleClass="std_imgArea affTreeOUIcon organisationalUnit" style="float: left;" rendered="#{!node.mps && node.topLevel}"></h:panelGroup>
+						<h:graphicImage value="../images/publications_22.gif" height="22px" width="22px"  style="float: left;" rendered="#{!node.topLevel}"/>
+						<h:commandLink id="lnkAffiliationName" styleClass="line-height: 2.10em;" value="#{node.name}" action="#{node.startSearch}"/>
+						<h:outputText value=" (#{lbl.AffilitationTree_ouClosed})" rendered="#{node.isClosed}"/>
+						&#160;
+						<h:outputLink id="lnkAffiliationDetails" title="#{tip.Affiliation_details}" value="" onclick="openCenteredWindow('#{ApplicationBean.appContext}AffiliationDetailPage.jsp?id=#{node.reference.objectId}', 980, 400, 'Details');return false">   [<h:outputText value="#{lbl.AffiliationTree_lnkDescription}"/>]</h:outputLink>
+					</h:panelGroup>
+				</rich:treeNode>
 			</rich:recursiveTreeNodesAdaptor>
 		</rich:tree>
 
