--- a/pubman/pubman_presentation/src/main/webapp/search/ui/OrganizationCriterionCollection.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/search/ui/OrganizationCriterionCollection.jspf
@@ -64,6 +64,18 @@ All rights reserved. Use is subject to license terms.
 					<h:commandButton id="btnAddOrganizationCriterionFirst" styleClass="min_imgBtn groupTool add" value=" " title="#{tip.search_btAdd}" action="#{AdvancedSearchEdit.organizationCriterionCollection.organizationCriterionManager.addObject}" />
 					<h:commandButton id="btnRemoveOrganizationCriterionFirst" styleClass="min_imgBtn groupTool remove" value=" " title="#{tip.search_btRemove}" disabled="#{AdvancedSearchEdit.organizationCriterionCollection.organizationCriterionManager.size == 1}" action="#{AdvancedSearchEdit.organizationCriterionCollection.organizationCriterionManager.removeObject}"/>
 				</span>
+				
+				<b class="xLarge_area0_p8 endline labelLine clear">
+								&#160;<span class="noDisplay"> </span>
+				</b>
+				<span class="xHuge_area0 xTiny_marginLExcl endline">
+					<span class="xHuge_area0">
+						<span class="xHuge_checkbox tiny_marginRIncl">							
+							<h:selectBooleanCheckbox value="#{organizationCriterionBean.organizationCriterionVO.includePredecessorsAndSuccessors }" />
+							<h:outputLabel value="#{lbl.adv_search_lblInclHistory}" />						
+						</span>
+					</span>
+				</span>
 			</h:panelGroup>
 			<h:panelGroup layout="block" styleClass="free_area0 endline itemLine" rendered="#{organizationCriterionIterator.rowIndex > 0}">
 				<b class="xLarge_area0_p8 endline labelLine clear">
@@ -87,18 +99,15 @@ All rights reserved. Use is subject to license terms.
 					<h:commandButton id="btnAddOrganizationCriterion" styleClass="min_imgBtn groupTool add" value=" " title="#{tip.search_btAdd}" action="#{AdvancedSearchEdit.organizationCriterionCollection.organizationCriterionManager.addObject}" />
 					<h:commandButton id="btnRemoveOrganizationCriterion" styleClass="min_imgBtn groupTool remove" value=" " title="#{tip.search_btRemove}" disabled="#{AdvancedSearchEdit.organizationCriterionCollection.organizationCriterionManager.size == 1}" action="#{AdvancedSearchEdit.organizationCriterionCollection.organizationCriterionManager.removeObject}"/>
 				</span>
-			</h:panelGroup>
 			
-			
-			<h:panelGroup layout="block" styleClass="free_area0 endline itemLine noTopBorder">
 				<b class="xLarge_area0_p8 endline labelLine clear">
 								&#160;<span class="noDisplay"> </span>
 				</b>
 				<span class="xHuge_area0 xTiny_marginLExcl endline">
 					<span class="free_area0 checkboxDoubleGroup">
 						<span class="large_checkbox tiny_marginRIncl">							
-							<h:selectBooleanCheckbox id="OrganizationCriterionBean_includePredecessorsAndSuccessors" value="#{organizationCriterionBean.organizationCriterionVO.includePredecessorsAndSuccessors }" />
-							<h:outputLabel id="lblOrganizationCriterionBean_includePredecessorsAndSuccessors" value="#{lbl.adv_search_lblInclHistory}" />						
+							<h:selectBooleanCheckbox value="#{organizationCriterionBean.organizationCriterionVO.includePredecessorsAndSuccessors }" />
+							<h:outputLabel value="#{lbl.adv_search_lblInclHistory}" />						
 						</span>
 					</span>
 				</span>
