--- a/pubman/pubman_presentation/src/main/webapp/list/itemEventLogList.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/list/itemEventLogList.jspf
@@ -37,7 +37,7 @@ All rights reserved. Use is subject to license terms.
 		<h3 class="xLarge_area0_p8 endline blockHeader">
 			<h:outputText value="#{lbl.ViewItemFull_lblVersion} #{versionEntry.reference.versionNumber}"/>
 			<br/>
-			<h:commandLink id="lnkRollback" action="#{versionEntry.rollback}" useWindow="true" value="#{lbl.ViewItemFull_lblRollback}" rendered="#{ItemVersionListSessionBean.versionIterator.rowIndex > 0}" onclick="if(!confirm('#{msg.ConfirmRollbackItemVersion}')){return false;}" />
+			<h:commandLink id="lnkRollback" action="#{versionEntry.rollback}" value="#{lbl.ViewItemFull_lblRollback}" rendered="#{index > 0}" onclick="if(!confirm('#{msg.ConfirmRollbackItemVersion}')){return false;}" />
 		</h3>
 		<h:panelGroup styleClass="seperator" />
 		<div class="free_area0 itemBlockContent endline">
