Bugfix for context list
Former-commit-id: d1e8ad49e1c0e70e8fb01d73bc10ae6b01dec2dd

--- a/pubman/pubman_presentation/src/main/webapp/easySubmission/contextList.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/easySubmission/contextList.jspf
@@ -37,7 +37,7 @@ All rights reserved. Use is subject to license terms.
 
 <a4j:repeat id="iterDepositorContextList" var="context" value="#{ContextListSessionBean.depositorContextList}" rows="0" rowKeyVar="index">
 
-	<h:panelGroup layout="block" styleClass="full_area0 itemHeader" rendered="#{ContextListSessionBean.contextIterator.rowIndex == 0}">
+	<h:panelGroup layout="block" styleClass="full_area0 itemHeader" rendered="#{index == 0}">
 		<span class="xLarge_area0 endline">
 			&#160;
 		</span>
@@ -50,7 +50,7 @@ All rights reserved. Use is subject to license terms.
 			</b>
 		</span>
 	</h:panelGroup>
-	<h:panelGroup layout="block" styleClass="full_area0 itemHeader" rendered="#{ContextListSessionBean.contextIterator.rowIndex > 0}">
+	<h:panelGroup layout="block" styleClass="full_area0 itemHeader" rendered="#{index > 0}">
 		<span class="xLarge_area0 endline">
 			&#160;
 		</span>
