GUI work - JIRA tickets 2292, 2307
Former-commit-id: e20a24be5da5ec0d4fb4e6c962ee088a5858f112

--- a/pubman/pubman_presentation/src/main/webapp/localTags/ViewLocalTags.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/localTags/ViewLocalTags.jspf
@@ -60,7 +60,7 @@
 
 
 	</div>
-	<div class="large_area0_p0 lineToolSection">
+	<div class="xLarge_area0_p0 sectionToolSection">
 		<h:commandButton id="editLocalTags" styleClass="free_txtBtn groupBtn"  value="#{lbl.actionMenu_lnkEditLocalTags}" action="#{EditItem.loadEditLocalTags}"  rendered="#{EditItem.localTagEditingAllowed}" />
 	</div>
 </div>
