--- a/pubman/pubman_presentation/src/main/webapp/editItem/FilesGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/editItem/FilesGroup.jspf
@@ -21,7 +21,7 @@
             CDDL HEADER END
 
 
-            Copyright 2006-2012 Fachinformationszentrum Karlsruhe Gesellschaft
+            Copyright 2006-2011 Fachinformationszentrum Karlsruhe Gesellschaft
             für wissenschaftlich-technische Information mbH and Max-Planck-
             Gesellschaft zur Förderung der Wissenschaft e.V.
             All rights reserved. Use is subject to license terms.
@@ -40,46 +40,11 @@
 	<h:panelGroup layout="block" id="files" styleClass="free_area0 itemBlockContent endline">
 		<a class="free_area0 collapse"><h:outputText value="#{lbl.ViewItemFull_lblHideGroup} " /></a>
 		
-		
-		<h:panelGroup layout="block" styleClass="free_area0 endline itemLine fileSection">
-				<b class="xLarge_area0_p8 endline labelLine clear">
-					&#160;<h:outputText styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="#{genre.files_optional != 'true'}" /><h:outputText value="#{lbl.EditItem_lblFile}" rendered="#{genre.files_display != 'false'}"/><span class="noDisplay">: </span>
-				</b>
-				<span class="xHuge_area0 xTiny_marginLExcl endline">
-					<h:outputLabel id="lblLocalPath" styleClass="quad_label" value="#{lbl.EditItem_localPath}"/>
-					
-					<rich:fileUpload allowFlash="auto" id="inpFile" styleClass="quad_area1 fileInput" fileUploadListener="#{EditItem.fileUploaded}" maxFilesQuantity="50"
-					immediateUpload="true">
-						<a4j:support event="onuploadcomplete" reRender="files" />
-						
-					</rich:fileUpload>
-				</span>
-				<%--
-				<span class="large_area0_p8 lineToolSection">
-					<h:commandButton id="btnUploadFile" styleClass="free_txtBtn groupBtn fileUploadBtn" value="#{lbl.EditItem_btUpload_File}"/>
-				</span>
-				--%>
-		</h:panelGroup>
-			
-		
-		<%-- Add File from url--%>
-		<h:panelGroup layout="block" styleClass="free_area0 endline itemLine noTopBorder">
-			<b class="xLarge_area0_p8 endline labelLine clear">
-					&#160;<span class="noDisplay"> </span>
-			</b>
-			<span class="xHuge_area0 xTiny_marginLExcl endline">
-				<h:outputLabel id="lblAddFileFromUrl" styleClass="quad_label" value="#{lbl.EditItem_lblFileURL}" />
-				<h:inputText id="inpAddFileFromUrl" styleClass="quad_txtInput" value="#{EditItem.locatorUpload}" />
-			</span>
-			<span class="large_area0_p8 lineToolSection">
-				<a4j:commandButton reRender="editFile" id="btnUploadFileFromUrl" styleClass="free_txtBtn groupBtn" value="#{lbl.EditItem_btUpload_URL}" title="#{tip.EditItem_btUploadLocator}" action="#{EditItem.uploadLocator}" />
-			</span>
-		</h:panelGroup>
-			
+	
 		<a4j:repeat var="component" id="fileUploads" value="#{EditItem.files}" rowKeyVar="index" rows="0">
 
 
-<%-- Add File from local system --%>
+
 <%--
 			<h:panelGroup layout="block" styleClass="free_area0 endline itemLine fileSection"  rendered="#{component.index == 0 && (component.file.name == null || component.file.name == '')}">
 				<b class="xLarge_area0_p8 endline labelLine clear">
@@ -295,6 +260,43 @@
 			</h:panelGroup>
 
 		</a4j:repeat>
+		
+		<%-- Add File from local system --%>
+		<h:panelGroup layout="block" styleClass="free_area0 endline itemLine fileSection #{EditItem.numberOfFiles == 0 ? 'noTopBorder' : ''}">
+				<b class="xLarge_area0_p8 endline labelLine clear">
+					&#160;<h:outputText styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="#{genre.files_optional != 'true'}" /><h:outputText value="#{lbl.EditItem_lblFile}" rendered="#{genre.files_display != 'false'}"/><span class="noDisplay">: </span>
+				</b>
+				<span class="xHuge_area0 xTiny_marginLExcl endline">
+					<%--
+					<h:outputLabel id="lblLocalPath" styleClass="quad_label" value="#{lbl.EditItem_localPath}"/>
+					--%>
+					<rich:fileUpload listHeight="60px" addControlLabel="#{lbl.EditItem_btAddFile}" allowFlash="auto" id="inpFile" styleClass="quad_area1 fileInput" fileUploadListener="#{EditItem.fileUploaded}" maxFilesQuantity="50"
+					immediateUpload="true">
+						<a4j:support event="onuploadcomplete" reRender="files" />
+						
+					</rich:fileUpload>
+				</span>
+				<%--
+				<span class="large_area0_p8 lineToolSection">
+					<h:commandButton id="btnUploadFile" styleClass="free_txtBtn groupBtn fileUploadBtn" value="#{lbl.EditItem_btUpload_File}"/>
+				</span>
+				--%>
+		</h:panelGroup>
+			
+		
+		<%-- Add File from url--%>
+		<h:panelGroup layout="block" styleClass="free_area0 endline itemLine noTopBorder">
+			<b class="xLarge_area0_p8 endline labelLine clear">
+					&#160;<span class="noDisplay"> </span>
+			</b>
+			<span class="xHuge_area0 xTiny_marginLExcl endline">
+				<h:outputLabel id="lblAddFileFromUrl" styleClass="quad_label" value="#{lbl.EditItem_lblFileURL}" />
+				<h:inputText id="inpAddFileFromUrl" styleClass="quad_txtInput" value="#{EditItem.locatorUpload}" />
+			</span>
+			<span class="large_area0_p8 lineToolSection">
+				<a4j:commandButton reRender="editFile" id="btnUploadFileFromUrl" styleClass="free_txtBtn groupBtn" value="#{lbl.EditItem_btUpload_URL}" title="#{tip.EditItem_btUploadLocator}" action="#{EditItem.uploadLocator}" />
+			</span>
+		</h:panelGroup>
 		
 				     
 	</h:panelGroup>
