Message for invalid url reactivated
Former-commit-id: 5d1721c9953362d3d1ea2e0b9992a1869c28b5a4

--- a/pubman/pubman_presentation/src/main/webapp/editItem/FilesGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/editItem/FilesGroup.jspf
@@ -294,7 +294,7 @@
 				<h:inputText id="inpAddFileFromUrl" styleClass="quad_txtInput" value="#{EditItem.locatorUpload}" />
 			</span>
 			<span class="large_area0_p8 lineToolSection">
-				<a4j:commandButton reRender="editFile" id="btnUploadFileFromUrl" styleClass="free_txtBtn groupBtn" value="#{lbl.EditItem_btUpload_URL}" title="#{tip.EditItem_btUploadLocator}" action="#{EditItem.uploadLocator}" />
+				<a4j:commandButton reRender="editFile,messages" id="btnUploadFileFromUrl" styleClass="free_txtBtn groupBtn" value="#{lbl.EditItem_btUpload_URL}" title="#{tip.EditItem_btUploadLocator}" action="#{EditItem.uploadLocator}" />
 			</span>
 		</h:panelGroup>
 		
