--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/componentCSS/lists.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/componentCSS/lists.css
@@ -245,6 +245,16 @@ th .selectMenu {
 	padding-top: 0em;
 }
 
+.selectMenu .selectAll {
+	cursor:pointer;
+}
+.selectMenu .selectNone {
+	cursor:pointer;
+}
+.selectMenu .toggleAll {
+	cursor:pointer;
+}
+
 .optionHeadlineSeparator {
 	margin:0; 
 	padding:0;
